[package]
name = "sakura-api"
version = "0.1.0"
authors = ["suba327777"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres", "chrono","r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"
chrono = { version= "0.4.31",features = ["serde"]}
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master" }
confy = { version = "0.6.1", features = ["yaml_conf"], default-features = false }
serde_derive = "1.0.193"
paho-mqtt-sys = "0.9.0"
env_logger = "0.11.3"
async-std = "1.12.0"
futures = "0.3.29"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.116"
chrono-tz = "0.9.0"
reqwest = "0.12.3"